<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.loginapp.SignUpActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/signUp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textAppearance="@android:style/TextAppearance.Material.Display2" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/email"
            android:textAppearance="@android:style/TextAppearance.Medium" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/userEmail"
            android:layout_marginStart="20dp"
            android:hint="@string/emailHint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/password"
            android:textAppearance="@android:style/TextAppearance.Medium" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_marginStart="20dp"
            android:hint="@string/passwordHint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_marginTop="40dp"
        android:gravity="bottom|center">
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/submit"
        android:id="@+id/signUpSubmit"/>
    </LinearLayout>
</LinearLayout>
